Working on chapter 4.

--- a/latex/chapter-appendix1.tex
+++ b/latex/chapter-appendix1.tex
@@ -1,6 +1,6 @@
 \chapter{Speakur source code example}
 \index{Appendix!Speakur source code@\emph{Speakur source code}}%
 
-This index may contain an example of Speakur's source code...
+This appendix may contain an example of Speakur's source code...
 
 
