--- a/latex/chapter-appendix2.tex
+++ b/latex/chapter-appendix2.tex
@@ -13,7 +13,7 @@ Web Components\index{Web Components} polyfill\index{polyfill}, core library, Cor
 \item Firebase\index{Firebase} database service and client library~\cite{firebasecontributors2015}
 \item Marked\index{Marked library} library~\cite{christopherjeffrey2014}
 \item highlight.js\index{highlight.js library} library
-\item i18next\index{i18next library} library
+\item i18next\index{i18next library} library~\cite{i18nextcontributors2015}
 \item moment.js\index{moment.js library} library
 \item lodash.js\index{lodash.js library} library
 \item jQuery.js\index{jQuery} library
