--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -438,11 +438,11 @@ complement to the modularity and portability of native {HTML} Web Components.},
 
 @online{firebasecontributors2015,
 	title = {Firebase},
-	url = {https://www.firebase.com/},
+	url = {https://www.firebase.com/docs/web/guide/understanding-data.html},
 	author = {Firebase contributors},
 	month = mar,
 	year = {2015},
-	howpublished = {https://www.firebase.com/}
+	howpublished = {https://www.firebase.com/docs/web/guide/understanding-data.html}
 },
 
 @online{penades2015,
@@ -660,4 +660,31 @@ Named for the Vulcanization process that turns polymers into more durable materi
 	month = feb,
 	year = {2015},
 	howpublished = {https://www.polymer-project.org/0.5/docs/polymer/databinding.html}
+},
+
+@online{polymercontributors2015-c,
+	title = {Firebase Element},
+	url = {https://github.com/polymer/firebase-element/},
+	author = {Polymer contributors},
+	month = mar,
+	year = {2015},
+	howpublished = {https://github.com/polymer/firebase-element/}
+},
+
+@online{i18nextcontributors2015,
+	title = {i18next library},
+	url = {http://i18next.com/},
+	abstract = {i18next is a full-featured i18n javascript library for translating your webapplication.},
+	author = {i18next contributors},
+	month = feb,
+	year = {2015},
+	howpublished = {http://i18next.com/}
+},
+
+@book{sadalage2012,
+	title = {{NoSQL} distilled: a brief guide to the emerging world of polyglot persistence},
+	isbn = {978-0321826626},
+	publisher = {Pearson Education},
+	author = {Sadalage, Pramod J and Fowler, Martin},
+	year = {2012}
 }
