--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -39,6 +39,8 @@
 %\usepackage{float}
 %\restylefloat{table}
 
+\usepackage{caption}
+\usepackage{subcaption}  % for sub-figures
 
 \usepackage[backend=biber,url=false,citestyle=numeric,firstinits=false]{biblatex}
 \usepackage{citesort}         	% 
