Adjust image widths, and add a new figure for component hierarchy.

--- a/latex/chapter-approach.tex
+++ b/latex/chapter-approach.tex
@@ -43,7 +43,7 @@ in 15 languages as shown in Figure~\ref{f:lang}.
 
 \begin{figure}[htb]
 \centering
- \includegraphics[width=5.5in]{images/screenshot_20150320_1923_lang.png}
+ \includegraphics[width=\textwidth]{images/screenshot_20150320_1923_lang.png}
 \caption{Speakur's interface language\index{internationalization} updates instantly upon selection.}
 \label{f:lang}
 \end{figure}
