--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -42,7 +42,7 @@ For example, to add a Bootstrap site navigation bar to your page, you must essen
 
 \begin{figure}[htb]
 \centering
- \includegraphics[width=6in]{images/bootstrap_navbar_html.png}
+ \includegraphics[width=\textwidth]{images/bootstrap_navbar_html.png}
 \caption{Partial example of Twitter\index{Twitter} Bootstrap\index{Bootstrap} navigation bar HTML.}
 \label{f:twbs1}
 \end{figure}
@@ -93,9 +93,10 @@ This shadow\index{Shadow DOM} Document Object Model (DOM)\index{DOM} inside the
 These inner playback controls are themselves built out of HTML, CSS\index{CSS} and JS but these details are not exposed to web authors who simply place a \tcode{<video>} element on their page. 
 Figure~\ref{f:html5video} illustrates how this works. It shows the shadow (internal) DOM of a \tcode{<video>} element on a page with the Play button \tcode{<div>} highlighted.
 
+
 \begin{figure}[htb]
-\centering
- \includegraphics[width=5.5in]{images/html5_video_control.png}
+%\centering
+\centerline{\includegraphics[width=6in]{images/html5_video_control.png}} 
 \caption{Opera's\index{Opera} shadow DOM for \tcode{<video>}\index{<video>} highlighting the Play button}
 \label{f:html5video}
 \end{figure}
