--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -35,7 +35,7 @@ More than any other invention, other than perhaps email, the World Wide Web (WWW
 
 \begin{figure}[htb]
 \centering
- \includegraphics[width=6in]{images/screenshot_20150312_1630_v2.png}
+ \includegraphics[width=\textwidth]{images/screenshot_20150312_1630_v2.png}
 \caption{A Speakur thread inside a demonstration page.}
 \label{f:demo1}
 \end{figure}
